added speakers to schedule and abstracts pdf file

--- a/websites/ELTWorkshopSept2025.html
+++ b/websites/ELTWorkshopSept2025.html
@@ -143,27 +143,115 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="workshop"><td class="nix">09:00</td><td class="nix"></td><td>ANDES</td><td>METIS</td></tr>
-          <tr class="workshop"><td class="nix">09:20</td><td class="nix"></td><td>ANDES</td><td>METIS</td></tr>
-          <tr class="workshop"><td class="nix">09:40</td><td class="nix"></td><td>ANDES</td><td>METIS</td></tr>
-          <tr class="workshop"><td class="nix">10:00</td><td class="nix"></td><td>ANDES</td><td>METIS</td></tr>
-          <tr class="coffeeLunch"><td class="nix">10:20</td><td>Coffee</td><td>Coffee</td><td>Coffee</td></tr>
-          <tr class="workshop"><td class="nix">11:00</td><td>ELT</td><td>MOSAIC</td><td>METIS 3-5</td></tr>
-          <tr class="workshop"><td class="nix">11:20</td><td>MICADO</td><td>MOSAIC</td><td>METIS</td></tr>
-          <tr class="workshop"><td class="nix">11:40</td><td>MICADO</td><td>MOSAIC</td><td>METIS</td></tr>
-          <tr class="workshop"><td class="nix">12:00</td><td>MICADO</td><td>MOSAIC</td><td>METIS</td></tr>
-          <tr class="coffeeLunch"><td class="nix">12:20</td><td>Lunch</td><td>Lunch</td><td>Lunch</td></tr>
-          <tr class="scopeSim"><td class="nix">14:00</td><td class="workshop">MORFEO</td><td class="conferenceDinner">Round Table Discussion</td><td>ScopeSim Hackathon</td></tr>
-          <tr class="scopeSim"><td class="nix">14:20</td><td class="workshop">MORFEO</td><td class="conferenceDinner">What keeps me up at night!</td><td>Part 3</td></tr>
-          <tr class="scopeSim"><td class="nix">14:40</td><td class="workshop">MORFEO</td><td>ScopeSim Hackathon</td><td></td></tr>
-          <tr class="scopeSim"><td class="nix">15:00</td><td class="workshop">MORFEO</td><td>Part 1</td><td></td></tr>
-          <tr class="coffeeLunch"><td class="nix">15:20</td><td>Coffee</td><td>Coffee</td><td>Coffee</td></tr>
-          <tr class="scopeSim"><td class="nix">16:00</td><td>ScopeSim Intro</td><td>ScopeSim Hackathon</td><td>ScopeSim Hackathon</td></tr>
-          <tr class="scopeSim"><td class="nix">16:20</td><td>(Beginner/Advanced)</td><td>Part 2</td><td>Part 4 (Optional)</td></tr>
-          <tr class="scopeSim"><td class="nix">16:40</td><td></td><td></td><td></td></tr>
-          <tr class="scopeSim"><td class="nix">17:00</td><td></td><td></td><td></td></tr>
-          <tr><td>17:20</td><td></td><td></td><td></td></tr>
-          <tr><td>19:00</td><td class="conferenceDinner">Conference Dinner</td><td class="conferenceDinner">Observatory Tour</td><td></td></tr>
+          <tr class="workshop">
+            <td class="nix">09:00</td>
+            <td class="nix"></td>
+            <td><b>Alessandro Marconi</b>  [ANDES PI]<br>"Introduction to ANDES, pt. 1: Scientific Overview"</td>
+            <td><b>Wolfgang Brandner</b>  [METIS Cal Sci]<br>"METIS Overview"</td></tr>
+          <tr class="workshop">
+            <td class="nix">09:20</td>
+            <td class="nix"></td>
+            <td><b>Livia Origlia</b>  [ANDES Inst Sci]<br>"Introduction to ANDES, pt. 2: Technical Overview"</td>
+            <td><b>Iain Hammond</b><br>"Protoplanets with METIS: Strategy and Predictions for First Light"</td></tr>
+          <tr class="workshop">
+            <td class="nix">09:40</td>
+            <td class="nix"></td>
+            <td><b>Erik Zackrisson</b><br>"High-redshift science with ANDES"</td>
+            <td><b>Cade Bürgy</b><br>"A preview onto the scientific potential of METIS: Zooming into the terrestrial-planet forming regions of discs"</td></tr>
+          <tr class="workshop">
+            <td class="nix">10:00</td>
+            <td class="coffeeLunch">Registration + Coffee</td>
+            <td><b>Chiara Selmi</b><br>"High-contrast Exoplanet Imaging with ANDES"</td>
+            <td><b>Danny Gasman</b><br>"Uncovering the structure of circumplanetary disks using CO line profiles observed with METIS"</td></tr>
+          <tr class="coffeeLunch">
+            <td class="nix">10:20</td>
+            <td></td>
+            <td>Coffee</td>
+            <td>Coffee</td></tr>
+          <tr class="coffeeLunch">
+            <td class="nix">10:40</td>
+            <td class="conferenceDinner">Kieran Leschinski<br>"Welcome + Logistics"</td>
+            <td></td>
+            <td></td></tr>
+          <tr class="workshop">
+            <td class="nix">11:00</td>
+            <td><b>Joel Vernet</b>  [ESO ELT Prog Sci]<br>"ELT Overview"</td>
+            <td><b>Roser Pello</b>  [MOSAIC PI]<br>"MOSAIC for the ELT: current status"</td>
+            <td><b>Frederic Merlin</b><br>"Solar system investigation using ELT-MICADO"</td></tr>
+          <tr class="workshop">
+            <td class="nix">11:20</td>
+            <td><b>Mario van den Ancker</b><br>"From Dust to Planets: New Perspectives on Transition Disks with ELT Observations"</td>
+            <td><b>Mathieu Puech</b>  [MOSAIC Proj Sci]<br>"MOSAIC: Scientific Contributions"</td>
+            <td><b>Camille Chatenet</b><br>"Trans-Neptunian Objects with MICADO"  </td></tr>
+          <tr class="workshop">
+            <td class="nix">11:40</td>
+            <td><b>Ric Davies</b>  [MICADO PI]<br>"MICADO: the start of integration"  </td>
+            <td><b>Nicolas Laporte</b><br>"Protoclusters at High Redshift with MOSAIC"  </td>
+            <td><b>Gabriele Cugno</b><br>"Circumplanetary Disks and Moon Formation"  </td></tr>
+          <tr class="workshop">
+            <td class="nix">12:00</td>
+            <td><b>Stefan Gillessen</b><br>"Gas, stars and black holes around Sgr A* with MICADO"  </td>
+            <td><b>Davide Savio</b><br>"Unveiling the Mysteries of Modal Noise: From Laboratory Experiments to Simulations and Scientific Impact on ANDES/ELT"  </td>
+            <td><b>Wolfgang Brandner</b><br>"Science with the ANDES K-band spectrograph"  </td></tr>
+          <tr class="coffeeLunch">
+            <td class="nix">12:20</td>
+            <td>Lunch</td>
+            <td>Lunch</td>
+            <td>Lunch</td></tr>
+          <tr class="scopeSim"><td class="nix">14:00</td>
+            <td class="workshop"><b>Carmelo Archidiacono</b>  [MORFEO Inst Sci]<br>"MORFEO Overview"  </td>
+            <td class="conferenceDinner">Round Table Discussion with Consortium Representatives<br><b>"What keeps me awake at night!"  </td>
+            <td><b>ScopeSim Hackathon</b><br>Part 3</td></tr>
+          <tr class="scopeSim"><td class="nix">14:20</td>
+            <td class="workshop"><b>Giorgia Girardi</b><br>"HIEROs: Characterizing Dust-Obscured Galaxies in the Early Universe"  </td>
+            <td class="conferenceDinner"></td>
+            <td>Beginners topics:<br>Implementing Science cases</td></tr>
+          <tr class="scopeSim"><td class="nix">14:40</td>
+            <td class="workshop"><b>Letizia Scaloni</b><br>"Probing Galaxy Structures and Stellar Population Properties with MICADO & MORFEO: Insights from ScopeSim simulations"</td>
+            <td class="conferenceDinner"></td>
+            <td>Advanced topics:<br>Common traps and pitfalls</td></tr>
+          <tr class="scopeSim"><td class="nix">15:00</td>
+            <td class="workshop"><b>Violeta Gámez Rosas</b><br>"The prospect of AGN science with METIS"  </td>
+            <td class="coffeeLunch">Coffee</td>
+            <td></td></tr>
+          <tr class="coffeeLunch"><td class="nix">15:20</td>
+            <td>Coffee</td>
+            <td></td>
+            <td>Coffee</td></tr>
+          <tr class="coffeeLunch"><td class="nix">15:40</td>
+            <td></td>
+            <td class="scopeSim"><b>ScopeSim Hackathon</b><br>Part 2</td>
+            <td></td></tr>
+          <tr class="scopeSim"><td class="nix">16:00</td>
+            <td><b>ScopeSim Intro</b><br>(Beginner/Advanced)</td>
+            <td>Beginners topics: Driving ScopeSim, Creating custom on-sky target descriptions<br></td>
+            <td><b>ScopeSim Helpdesk</b><br>(Optional)</td></tr>
+          <tr class="scopeSim"><td class="nix">16:20</td>
+            <td>Beginners topics:<br>ScopeSim Installation, Instrument packages, "Hello (exo)World"</td>
+            <td>Advanced topics: Combining observations with multiple instruments. E.g. MICADO + METIS<br></td>
+            <td></td></tr>
+          <tr class="scopeSim"><td class="nix">16:40</td>
+            <td>Advanced topics:<br>Implementing science cases</td>
+            <td></td>
+            <td></td></tr>
+          <tr class="scopeSim"><td class="nix">17:00</td>
+            <td></td>
+            <td></td>
+            <td></td></tr>
+          <tr><td>17:20</td>
+            <td></td>
+            <td></td>
+            <td></td></tr>
+          <tr class="nix">
+            <td>19:00</td>
+            <td class="conferenceDinner"><b>Conference Dinner</b></td>
+            <td></td>
+            <td></td></tr>
+          <tr class="conferenceDinner">
+            <td class="nix">20:00</td>
+            <td></td>
+            <td><b>Tour of the Observatory</b></td>
+            <td class="nix"></td></tr>
         </tbody>
       </table>
 
