--- a/websites/ELTWorkshopSept2025.html
+++ b/websites/ELTWorkshopSept2025.html
@@ -126,12 +126,21 @@
     <div class="w3-container w3-content w3-center w3-padding-32">
       <h2 class="w3-wide">Schedule</h2>
 
+
+
       <p class="w3-left-align">Individual presentations will follow a 15+5 min format.<br>
       Presenters are encouraged to additionally address the  <span class="w3-tag w3-red">following topics</span> during their talk:</p>
       <ul class="w3-left-align">
         <li class="w3-large">Which ELT instruments and modes are most valuable for the science case(s)?</li>
         <li class="w3-large">Synergies, if any, with other observatories (JWST, VLT, etc).</li>
       </ul>
+
+      <p>
+        <a href="https://raw.githubusercontent.com/AstarVienna/astarvienna.github.io/main/websites/2025_Vienna_ELT_abstracts_booklet.pdf"
+           target="_blank" download class="w3-button w3-green w3-border w3-border-white w3-round-large" style="font-size:30px">
+          DOWNLOAD ABSTRACTS BOOKLET (PDF)
+        </a>
+      </p>
 
       <table>
         <thead>
